add world dump.
XY, BXY, ABSANGLE, BANGLE,
if you want to dump the world, please remove
the comment out mark.

github page init

edit side index

world info for github page

add world page

modified semicolon -> colon

double colon must be used in class method.

changed some.

Makefile.am : defend
robot : same.

add world dump.

World::Perceptor::getXY() and getBXY, ABSANGLE, BANGLE.

--- a/hillstoneUnited/Makefile.am
+++ b/hillstoneUnited/Makefile.am
@@ -15,7 +15,8 @@ hillstoneUnited_MAIN = main.cpp \
 											 drawing.hpp drawing.cpp
 
 brain = brain/brainbase.hpp brain/brainbase.cpp \
-		brain/runtoball.hpp brain/runtoball.cpp
+		brain/runtoball.hpp brain/runtoball.cpp \
+		brain/defend.hpp brain/defend.cpp
 
 movement = movement/movementbase.hpp movement/movementbase.cpp \
 					 movement/ticktackbase.hpp movement/ticktackbase.cpp \
